--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "start" : "electron main.js"
     },
     "devDependencies": {
-      "electron-prebuilt": "^1.2.0"
+      "electron-prebuilt": "^1.2.0",
+      "electron": "1.8.2"
     }
   }
