--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     },
     "devDependencies": {
       "electron-prebuilt": "^1.2.0",
-      "electron": "1.8.2"
+      "electron": "1.8.2",
+      "gm":"1.23.1",
+      "canvas":"1.6.9"
     }
   }
